<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">Brighter and Bigger</string>
    <string name="splash_name">Brighter and Bigger</string>
    <string name="app_version">@string/versionName</string>
    <string name="app_description">For reading small letters</string>
    <string name="app_copyright">Copyright 2018-2025 Kazunori Asada.</string>
    <string name="app_allrights">All rights reserved.</string>

    <string name="sFormatBrighter"> %+d Brighter</string>
    <string name="sFormatBigger">%.1f Bigger</string>
    <string name="sFormatClearer">%d Clearer </string>

    <string name="sFormatBrighterNumber">%+d</string>
    <string name="sFormatBiggerNumber">%.1f</string>
    <string name="sFormatClearerNumber">%+d</string>

    <string name="sStatusBrighter">Brighter Status</string>
    <string name="sStatusBigger">Bigger Status</string>
    <string name="sStatusClearer">Clearer Status</string>

    <string name="sBrightnessPicker">Brighter Picker</string>
    <string name="sMagnificationPicker">Bigger Picker</string>
    <string name="sContrastPicker">Clearer Picker</string>

    <string name="sButtonSettings">Settings</string>
    <string name="sButtonProjection">Tilted Angle Correction</string>
    <string name="sButtonLight">Torch</string>
    <string name="sButtonAutoFocus">Disable Cont. Auto Focus</string>
    <string name="sButtonPause">Freeze</string>
    <string name="sButtonReverse">Reverse</string>
    <string name="sButtonSave">Save</string>
    <string name="sButtonImageSource">Image Source</string>

    <string name="sIconBrighter">Brighter Icon</string>
    <string name="sIconBigger">Bigger Icon</string>
    <string name="sIconClearer">Clearer Icon</string>

    <string name="sBrighterNumber">Brighter Value</string>
    <string name="sBiggerNumber">Bigger Value</string>
    <string name="sClearerNumber">Clearer Value</string>

    <string name="sProjectionPinchArea">Pinch Area of Tilted Angle Correction</string>
    <string name="sManualView">How To Use</string>
    <string name="sPrivacyView">Privacy Policy</string>

    <string name="sDismiss">Dismiss</string>
    <string name="sCameraError">Camera Error</string>
    <string name="sFreezeError">Freeze Error</string>
    <string name="sFileLoadError">Image File Load Error</string>
    <string name="sFileSaveError">Image File Save Error</string>
    <string name="sCameraReason">This app uses a camera to get image.</string>
    <string name="sStorageReason">This app can use external storage for saving the processed images.</string>
    <string name="sSoundError">Sound Error</string>
    <string name="sNoTapFocusOnContinuousModeTitle">Tap Focus Error</string>
    <string name="sNoTapFocusOnContinuousModeMessage">On this device, the tap focus function during continuous auto focus mode does not work. This function was turned off.</string>
    <string name="sNoTapFocusAnywayTitle">Tap Focus Error</string>
    <string name="sNoTapFocusAnywayMessage">On this device, the tap focus function does not work. This function was turned off.</string>

    <string name="sCameraFileSwap">Switch camera/file</string>
    <string name="sRearCamera">Rear Camera</string>
    <string name="sFrontCamera">Front Camera</string>
    <string name="sFile">File</string>

    <string name="sColorPickerCancel">Cancel</string>
    <string name="sColorPickerTitle">Color Info</string>
    <string name="sColorPickerSave">Save</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_monochrome_mode">MONOCHROME MODE</string>
    <string name="pref_title_discard_color_info">Discard Color Info.</string>
    <string name="pref_monochrome_footer">Discard Chromaticity and Only Use Lightness Information.</string>
    <string name="pref_title_use_color">Color(s) Used</string>
    <string name="pref_title_custom_color">Custom Color</string>
    <string name="pref_title_custom_color_light">Custom Color (Light)</string>
    <string name="pref_title_custom_color_dark">Custom Color (Dark)</string>

    <string name="pref_header_user_interface">USER INTERFACE SETTING</string>
    <string name="pref_title_tone_rotation">Shift on double-tap w/ 2 fingers</string>
    <string name="pref_title_big_icons">Big Texts and Buttons</string>
    <string name="pref_title_long_press_freeze">Freeze on Long Press</string>
    <string name="pref_title_volume_button_shutter">Save on Volume</string>
    <string name="pref_title_max_zoom_2x">Max Magnification x20</string>
    <string name="pref_title_cont_autofocus_off">Cont. Auto Focus OFF</string>
    <string name="pref_title_tilted_angle">DEGREE OF TILTED ANGLE CORRECTION</string>
    <string name="pref_title_tilted_angle_summary">Also can be changed by pinching an area at the bottom of the screen.</string>

    <string name="pref_category_other">OTHER</string>
    <string name="pref_title_reset_message">Reset All Parameters to Default.</string>
    <string name="pref_title_reset_ok">OK</string>
    <string name="pref_title_reset_cancel">Cancel</string>
    <string name="pref_title_reset">Reset</string>

    <string name="pref_title_how_to_use">How to Use</string>
    <string name="pref_manual_html">manual.html</string>

    <string name="pref_title_privacy">Privacy Policy</string>
    <string name="pref_privacy_html">privacy.html</string>

    <string name="pref_category_application_info">APPLICATION INFO.</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_copyright">Copyright © 2025</string>
    <string name="author">Kazunori Asada</string>

    <string name="pref_title_color_used">Color(s) Used</string>
    <string name="pref_color_used_original_title">Original</string>
    <string-array name="pref_color_used_list_titles">
        <item>Achromatic (Black and White)</item>
        <item>Yellow</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Sepia</item>
        <item>Yellow and Blue</item>
        <item>Blue Green and Red</item>
        <item>Custom (Monochrome)</item>
        <item>Custom (Duochrome)</item>
    </string-array>

    <!-- Color Definition (No translation needed) -->
    <string-array name="pref_color_used_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="pref_color_dic" translatable="false">
        <item>FFFFFF FFFFFF</item>
        <item>FFFF00 FFFF00</item>
        <item>00FFFF 00FFFF</item>
        <item>00FF00 00FF00</item>
        <item>6A4A2B 6A4A2B</item>
        <item>FFFF00 0000FF</item>
        <item>00FFA0 FF0000</item>
        <item>mono</item>
        <item>duo</item>
    </string-array>

    <!-- Preference Keys (No translation needed) -->
    <string name="pref_key_version_code" translatable="false">version_code</string>
    <string name="pref_key_mono_mode_category" translatable="false">mono_mode_category</string>
    <string name="pref_key_discard_color_info" translatable="false">discard_color_info</string>
    <string name="pref_key_color_used" translatable="false">color_used</string>
    <string name="pref_key_mono_mode" translatable="false">mono_mode</string>
    <string name="pref_key_custom_mono_color" translatable="false">custom_mono_color</string>
    <string name="pref_key_custom_duo_color1" translatable="false">custom_duo_color1</string>
    <string name="pref_key_custom_duo_color2" translatable="false">custom_duo_color2</string>
    <string name="pref_key_tone_rotation" translatable="false">tone_rotation</string>
    <string name="pref_key_user_interface_category" translatable="false">user_interface_category</string>
    <string name="pref_key_big_icons" translatable="false">big_icons</string>
    <string name="pref_key_long_press_freeze" translatable="false">long_press_freeze</string>
    <string name="pref_key_volume_button_shutter" translatable="false">volume_button_shutter</string>
    <string name="pref_key_max_zoom_2x" translatable="false">max_zoom_2x</string>
    <string name="pref_key_cont_autofocus_off" translatable="false">cont_autofocus_off</string>
    <string name="pref_key_projection_bottom_ratio" translatable="false">projection_bottom_ratio</string>
    <string name="pref_key_projection_bottom_ratio_int" translatable="false">projection_bottom_ratio_int</string>
    <string name="pref_key_reset_all" translatable="false">reset_all</string>
    <string name="pref_key_manual" translatable="false">manual</string>
    <string name="pref_key_privacy" translatable="false">privacy</string>
    <string name="pref_key_camera_on_error4_occured" translatable="false">camera_on_error4_occured</string>
    <string name="pref_key_occured_trouble" translatable="false">occured_trouble</string>
</resources>
