<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".ColorPickerActivity">

    <LinearLayout
        android:id="@+id/color_picker_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/color_cancel"
                android:text="@string/sColorPickerCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/Blue700"
                android:gravity="center"/>

            <TextView
                android:id="@+id/color_title"
                android:text="@string/sColorPickerTitle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/color_save"
                android:text="@string/sColorPickerSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="@color/Blue700"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:background="@color/Gray50A80"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <View
                android:id="@+id/color_sample"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/color_r"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="R"
                android:gravity="center_vertical"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/color_g"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="G"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/color_b"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="B"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <GridView
            android:id="@+id/color_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:numColumns="25"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp">
        </GridView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>